Change Boolean usage from new Boolean() to Boolean.valueOf() (see Java 1.5 docs: Recommended change for speed & memory use)
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@1494 ef53c05b-3124-4d59-ae7d-fe3273f42be7